--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,37 @@
+@font-face {
+    font-family: "Stargate";
+    src: url("/css/stargate.woff2") format("woff2");
+}
+
+#errors {
+    visibility: hidden;
+    background: white;
+    border: 3px red solid;
+    padding: 10px;
+    margin: 20px 0 10px 0;
+    font-weight: bold;
+    color: darkred;
+}
+
+#known_gates table {
+    margin-left: 5em;
+}
+
+#known_gates table td:nth-child(1) {
+    width: 2em;
+}
+
+#known_gates table td:nth-child(2) {
+    font-family: Stargate;
+    width: 150px;
+}
+
+#known_gates table td:nth-child(3) {
+    font-family: Consolas, monospace;
+}
+
+
+
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);/*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
